# contracts/openapi.yaml
@@ -22,6 +22,8 @@ tags:
     description: Athlete registration and management
   - name: Events
     description: Event configuration and scheduling
+  - name: Heats
+    description: Heat generation and management
 
 # Default security - can be overridden per operation
 security: []
@@ -33,6 +35,8 @@ paths:
     $ref: './components/athletes.yaml#/paths/~1athletes'
   /events:
     $ref: './components/events.yaml#/paths/~1events'
+  /events/{eventId}/heats/generate:
+    $ref: './components/heats.yaml#/paths/~1events~1{eventId}~1heats~1generate'
 
 components:
   securitySchemes:
